--- a/pom.xml
+++ b/pom.xml
@@ -8,18 +8,28 @@
   <name>simple-war Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-	<dependency>
-	    <groupId>javax.servlet</groupId>
-	    <artifactId>javax.servlet-api</artifactId>
-	    <version>3.0.1</version>
-	    <scope>provided</scope>
-	</dependency>
-	<dependency>
-	    <groupId>javax.transaction</groupId>
-	    <artifactId>javax.transaction-api</artifactId>
-	    <version>1.2</version>
-      	<scope>provided</scope>
-	</dependency>
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>3.0.1</version>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
+        <groupId>javax.transaction</groupId>
+        <artifactId>javax.transaction-api</artifactId>
+        <version>1.2</version>
+          <!-- <scope>provided</scope>  -->
+    </dependency>
+    <dependency>
+        <groupId>org.jboss.narayana.jts</groupId>
+        <artifactId>narayana-jts-idlj</artifactId>
+        <version>5.2.10.Final</version>
+    </dependency>
+    <dependency>
+        <groupId>org.jboss</groupId>
+        <artifactId>jboss-transaction-spi</artifactId>
+        <version>7.6.0.Final</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>simple-war</finalName>
