--- a/pom.xml
+++ b/pom.xml
@@ -18,17 +18,31 @@
         <groupId>javax.transaction</groupId>
         <artifactId>javax.transaction-api</artifactId>
         <version>1.2</version>
-          <!-- <scope>provided</scope>  -->
+        <scope>provided</scope>
     </dependency>
+<!--    <dependency>-->
+<!--        <groupId>javax.interceptor</groupId>-->
+<!--        <artifactId>javax.interceptor-api</artifactId>-->
+<!--        <version>1.2</version>-->
+<!--        <scope>provided</scope>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--        <groupId>org.jboss.narayana.jts</groupId>-->
+<!--        <artifactId>narayana-jts-idlj</artifactId>-->
+<!--        <version>5.2.10.Final</version>-->
+<!--        <scope>provided</scope>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--        <groupId>org.jboss</groupId>-->
+<!--        <artifactId>jboss-transaction-spi</artifactId>-->
+<!--        <version>7.6.0.Final</version>-->
+<!--        <scope>provided</scope>-->
+<!--    </dependency>-->
     <dependency>
-        <groupId>org.jboss.narayana.jts</groupId>
-        <artifactId>narayana-jts-idlj</artifactId>
-        <version>5.2.10.Final</version>
-    </dependency>
-    <dependency>
-        <groupId>org.jboss</groupId>
-        <artifactId>jboss-transaction-spi</artifactId>
-        <version>7.6.0.Final</version>
+        <groupId>javax</groupId>
+        <artifactId>javaee-api</artifactId>
+        <version>7.0</version>
+        <scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
